# advancedC

./: CMakeLists.txt  HomeWork2Ex1.cpp  HomeWork2Ex2.cpp  HomeWork3.cpp  HomeWork4Ex1.cpp  HomeWork4Ex2.cpp  HomeWork5Ex1.cpp  HomeWork5Ex2.cpp  HomeWork6Ex1.cpp  HomeWork6Ex2.cpp  Lesson2.cpp  main.cpp  КВ. Занятие5.txt  КВ.Занятие1.txt  КВ.Занятие3.txt  КВ.Занятие4.txt  КВ.Занятие6.txt
