cmake_minimum_required(VERSION 3.20)
project(advancedC__)



set(CMAKE_CXX_STANDARD 20)

add_executable(advancedC__ main.cpp)
add_executable(second Lesson2.cpp)
add_executable(second1 HomeWork2Ex1.cpp)
add_executable(second2 HomeWork2Ex2.cpp HomeWork2Ex2.cpp)
add_executable(third Lesson3.cpp)
add_executable(third1 HomeWork3.cpp)
add_executable(fourth Lesson4.cpp)
add_executable(fourth1 HomeWork4Ex1.cpp json.hpp)
add_executable(fourth2 HomeWork4Ex2.cpp)